--- a/src/themes/wikimediaui/layouts.less
+++ b/src/themes/wikimediaui/layouts.less
@@ -5,12 +5,12 @@
 .theme-oo-ui-bookletLayout() {
 	&-outlinePanel {
 		> .oo-ui-outlineControlsWidget {
-			border-top: @border-dialog-bar;
+			border-top-color: @border-color-dialog-bar;
 		}
 	}
 
 	> .oo-ui-menuLayout-menu {
-		border-right: @border-dialog-bar;
+		border-right-color: @border-color-dialog-bar;
 	}
 }
 
@@ -34,7 +34,7 @@
 
 .theme-oo-ui-panelLayout() {
 	&-framed {
-		border: @border-dialog;
+		border-color: @border-color-dialog;
 	}
 }
 
