Messy attempt at exposing WMUI variables as CSS properties

--- a/src/themes/wikimediaui/theme.less
+++ b/src/themes/wikimediaui/theme.less
@@ -2,6 +2,7 @@
 // This file is in turn included when building the theme.
 
 // Base and theme variables and mixins.
+@import 'varexport.less';
 @import 'common.less';
 
 // Theme rules.
