--- a/src/themes/wikimediaui/common.less
+++ b/src/themes/wikimediaui/common.less
@@ -5,53 +5,57 @@
 // Pull in the main set of variables from the shared UI base
 // * Reaching into node_modules like this to avoid a symlink that Windows users won't like
 // * Use LESS "reference" import to avoid including the '/**' comment at the top of the file
-@import ( reference ) '../../../node_modules/wikimedia-ui-base/wikimedia-ui-base.less';
+@import ( reference ) './wmuivars.less';
 
 // Background & Text Colors
-@background-color-base--active: @wmui-color-base80;
-@background-color-frameless--hover: @background-color-quiet--hover;
-@background-color-frameless--active: @background-color-quiet--active;
-@background-color-pending-stripe: @wmui-color-base80;
+@background-color-base--active: var( --wmui-background-color-base--active );
+@background-color-frameless--hover: var( --wmui-background-color-frameless--hover );
+@background-color-frameless--active: var( --wmui-background-color-frameless--active );
+@background-color-pending-stripe: var( --wmui-background-color-pending-stripe );
 // Backdrop is the term used by CSS Fullscreen API and is used to dim the background when a modal Dialog is open. Also known as overlay mask.
-@background-color-backdrop-light: rgba( 255, 255, 255, 0.65 );
-@color-base--deemphasized: @wmui-color-base20;
-@color-taboption: @color-base--hover;
+@background-color-backdrop-light: var( --wmui-background-color-backdrop-light );
+@color-base--deemphasized: var( --wmui-color-base--deemphasized );
+@color-taboption: var( --wmui-color-taboption );
 
 // Primary 'Progressive' and 'Destructive' Colors
-@color-destructive-non-primary: #d73333; // Exemption for non-primary buttons, foremost used in VE, lightened up R50 to align to AA contrast ratio
+@color-destructive-non-primary: var( --wmui-color-destructive-non-primary ); // Exemption for non-primary buttons, foremost used in VE, lightened up R50 to align to AA contrast ratio
 
-@border-color-dialog: @border-color-base;
-@border-color-menu: @border-color-base;
+@border-color-base--darken14: var( --wmui-border-color-base--darken14 );
 
-@border-color-framed-progressive--hover: @color-primary--hover;
-@border-color-framed-destructive--hover: @color-destructive--hover;
-@border-color-frameless: transparent;
+@border-color-dialog: var( --wmui-border-color-dialog );
+@border-color-menu: var( --wmui-border-color-menu );
 
-@border-color-focus-inset: @color-base--inverted;
-@border-color-dialog-bar: @wmui-color-base70;
+@border-color-framed-progressive--hover: var( --wmui-border-color-framed-progressive--hover );
+@border-color-framed-destructive--hover: var( --wmui-border-color-framed-destructive--hover );
+@border-color-frameless: var( --wmui-border-color-frameless );
 
-@border-color-toolbar: @wmui-color-base70;
-@border-color-toolgroup: @wmui-color-base80;
+@border-color-focus-inset: var( --wmui-border-color-focus-inset );
+@border-color-dialog-bar: var( --wmui-border-color-dialog-bar );
 
-@box-shadow-toolbar-top: 0 1px 1px 0 rgba( 0, 0, 0, 0.1 );
-@box-shadow-toolbar-bottom: 0 -1px 1px 0 rgba( 0, 0, 0, 0.1 );
-@box-shadow-progressbar: @box-shadow-card;
-@box-shadow-progressive-filled--focus: inset 0 0 0 1px @color-primary, inset 0 0 0 2px @color-base--inverted;
-@box-shadow-frameless-indicator--focus: 0 0 0 2px @color-primary;
-@box-shadow-action--focus: @box-shadow-base--focus, 0 0 0 1px @color-primary;
-@box-shadow-toolbar-action-button--focus: inset 0 0 0 2px @color-primary, inset 0 0 0 3px @color-base--inverted;
-@box-shadow-popuptoolgroup-tool--focus: inset 0 0 0 2px @color-primary--focus;
-@box-shadow-input-binary--active: inset 0 0 0 1px @color-primary--active;
-@box-shadow-error--focus: inset 0 0 0 1px @color-error;
+@border-width-frameless-tab: var( --wmui-border-width-frameless-tab );
 
-@filter-drop-shadow-menu: drop-shadow( 0 2px 1px rgba( 0, 0, 0, 0.3 ) );
+@border-color-toolbar: var( --wmui-border-color-toolbar );
+@border-color-toolgroup: var( --wmui-border-color-toolgroup );
+
+@box-shadow-toolbar-top: var( --wmui-box-shadow-toolbar-top );
+@box-shadow-toolbar-bottom: var( --wmui-box-shadow-toolbar-bottom );
+@box-shadow-progressbar: var( --wmui-box-shadow-progressbar );
+@box-shadow-progressive-filled--focus: var( --wmui-box-shadow-progressive-filled--focus );
+@box-shadow-frameless-indicator--focus: var( --wmui-box-shadow-frameless-indicator--focus );
+@box-shadow-action--focus: var( --wmui-box-shadow-action--focus );
+@box-shadow-toolbar-action-button--focus: var( --wmui-box-shadow-toolbar-action-button--focus );
+@box-shadow-popuptoolgroup-tool--focus: var( --wmui-box-shadow-popuptoolgroup-tool--focus );
+@box-shadow-input-binary--active: var( --wmui-box-shadow-input-binary--active );
+@box-shadow-error--focus: var( --wmui-box-shadow-error--focus );
+
+@filter-drop-shadow-menu: var( --wmui-filter-drop-shadow-menu );
 
 // Binary Input Widgets (CheckboxInput, RadioInput, ToggleSwitch)
-@background-color-input-binary--active: @color-primary--active;
-@background-color-input-binary--checked: @color-primary;
-@border-color-input-binary: @border-color-base--active;
-@border-color-input-binary--active: @color-primary--active;
-@border-color-input-binary--checked: @color-primary;
+@background-color-input-binary--active: var( --wmui-background-color-input-binary--active );
+@background-color-input-binary--checked: var( --wmui-background-color-input-binary--checked );
+@border-color-input-binary: var( --wmui-border-color-input-binary );
+@border-color-input-binary--active: var( --wmui-border-color-input-binary--active );
+@border-color-input-binary--checked: var( --wmui-border-color-input-binary--checked );
 
 // Theme mixins
 
