--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -354,7 +354,7 @@
 			&::before {
 				// The subtracting-triangles method results in a line that
 				// is ~0.7px wide, so make it slightly darker to compensate.
-				border-bottom-color: darken( @border-color-base, 14% );
+				border-bottom-color: @border-color-base--darken14;
 			}
 
 			&::after {
@@ -583,18 +583,18 @@
 
 		&.oo-ui-optionWidget-selected {
 			color: @color-primary;
-			box-shadow: inset 0 -@border-width-frameless-tab 0 0 @color-primary;
+			box-shadow: inset 0 calc( -1 * @border-width-frameless-tab ) 0 0 @color-primary;
 		}
 
 		&.oo-ui-widget-enabled:not( .oo-ui-optionWidget-selected ) {
 			&:hover {
 				color: @color-primary--hover;
-				box-shadow: inset 0 -@border-width-frameless-tab 0 0 @color-primary--hover;
+				box-shadow: inset 0 calc( -1 * @border-width-frameless-tab ) 0 0 @color-primary--hover;
 			}
 
 			&:active {
 				color: @color-primary--active;
-				box-shadow: inset 0 -@border-width-frameless-tab 0 0 @color-primary--active;
+				box-shadow: inset 0 calc( -1 * @border-width-frameless-tab ) 0 0 @color-primary--active;
 			}
 		}
 	}
@@ -610,7 +610,7 @@
 	}
 
 	&-frameless {
-		box-shadow: inset 0 -@border-width-base 0 0 @border-color-base;
+		box-shadow: inset 0 calc( -1 * @border-width-base ) 0 0 @border-color-base;
 	}
 
 	// Add background gradient to emphasize tab overflow.
