--- a/src/themes/wikimediaui/tools.less
+++ b/src/themes/wikimediaui/tools.less
@@ -93,7 +93,7 @@
 			}
 
 			&.oo-ui-tool-active > .oo-ui-tool-link {
-				background-color: mix( @color-primary--active, @background-color-filled--disabled, 35% );
+				background-color:  @background-color-filled--primary-disabled;
 			}
 		}
 
