--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -345,7 +345,7 @@
 .theme-oo-ui-popupWidget() {
 	&-popup {
 		background-color: @background-color-base;
-		border: @border-menu;
+		border-color: @border-color-menu;
 		box-shadow: @box-shadow-menu;
 	}
 
@@ -403,7 +403,7 @@
 .theme-oo-ui-popupButtonWidget() {}
 
 .theme-oo-ui-progressBarWidget() {
-	border: @border-base;
+	border-color: @border-color-base;
 	box-shadow: @box-shadow-progressbar;
 
 	&:not( .oo-ui-pendingElement-pending ) {
