--- a/src/themes/wikimediaui/windows.less
+++ b/src/themes/wikimediaui/windows.less
@@ -42,13 +42,13 @@
 
 		&-horizontal {
 			.oo-ui-actionWidget {
-				border-right: @border-base;
+				border-right-color: @border-color-base;
 			}
 		}
 
 		&-vertical {
 			.oo-ui-actionWidget {
-				border-bottom: @border-base;
+				border-bottom-color: @border-color-base;
 			}
 		}
 	}
